--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"start": "yarn workspace @votelink/frontend start",
 		"prepare": "husky",
 		"prettier": "yarn workspace @votelink/frontend prettier",
-		"lint": "yarn workspace @votelink/frontend lint"
+		"lint": "yarn workspace @votelink/frontend lint",
+		"compile": "yarn workspace @votelink/contract compile"
 	},
 	"packageManager": "yarn@4.3.1",
 	"devDependencies": {
 		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2"
+		"@commitlint/config-conventional": "^19.2.2",
+		"hardhat": "^2.22.6"
 	}
 }
