--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@votelink/contract",
   "version": "0.1.0",
-  "private": true,
-  "packageManager": "yarn@4.3.1",
   "devDependencies": {
     "@ethersproject/abi": "~5.7.0",
     "@ethersproject/providers": "~5.7.1",
     "@nomicfoundation/hardhat-chai-matchers": "~2.0.3",
     "@nomicfoundation/hardhat-ethers": "~3.0.5",
+    "@nomicfoundation/hardhat-ignition": "^0.15.5",
     "@nomicfoundation/hardhat-network-helpers": "~1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "~2.0.3",
+    "@nomicfoundation/ignition-core": "^0.15.5",
     "@typechain/ethers-v5": "~10.1.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/circomlibjs": "^0",
@@ -40,9 +40,9 @@
   "scripts": {
     "account": "hardhat run scripts/listAccount.ts",
     "chain": "hardhat node --network hardhat --no-deploy",
-    "compile": "hardhat compile --force",
-    "deploy": "yarn compile && hardhat deploy",
-    "flatten": "yarn compile && hardhat flatten",
+    "compile": "hardhat compile",
+    "deploy": "pnpm run compile && hardhat deploy",
+    "flatten": "pnpm run compile && hardhat flatten",
     "fork": "MAINNET_FORKING_ENABLED=true hardhat node --network hardhat --no-deploy",
     "format": "prettier --write ./*.ts ./deploy/**/*.ts ./scripts/**/*.ts ./test/**/*.ts",
     "generate": "hardhat run scripts/generateAccount.ts",
@@ -55,6 +55,8 @@
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.0.1",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@openzeppelin/contracts": "^5.0.2",
     "@typechain/ethers-v6": "~0.5.1",
     "@zk-kit/eddsa-poseidon": "^0.11.0",
     "@zk-kit/poseidon-cipher": "^0.3.0",
@@ -64,12 +66,12 @@
     "dotenv": "~16.0.3",
     "hardhat-artifactor": "^0.2.0",
     "hardhat-dependency-compiler": "^1.2.1",
-    "maci-circuits": "^1.2.5",
-    "maci-cli": "^1.2.5",
-    "maci-contracts": "^1.2.5",
-    "maci-core": "^1.2.5",
-    "maci-crypto": "^1.2.5",
-    "maci-domainobjs": "^1.2.5",
+    "maci-circuits": "0.0.0-ci.70f81fa",
+    "maci-cli": "0.0.0-ci.70f81fa",
+    "maci-contracts": "0.0.0-ci.70f81fa",
+    "maci-core": "0.0.0-ci.70f81fa",
+    "maci-crypto": "0.0.0-ci.70f81fa",
+    "maci-domainobjs": "0.0.0-ci.70f81fa",
     "prompt": "^1.3.0",
     "qrcode": "~1.5.1",
     "snarkjs": "^0.7.3"
