--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@votelink/contract": "*",
+    "@votelink/contract": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
@@ -41,6 +41,5 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.36.1"
-  },
-  "packageManager": "yarn@4.3.1"
+  }
 }
